<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mcv_note"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:longClickable="true"
    android:layout_margin="4dp"
    android:transitionName="editView">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_note"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
...
